Part-way through another massive refactor/cleanup.

--- a/priv/templates/app-manpage.mustache
+++ b/priv/templates/app-manpage.mustache
@@ -5,8 +5,8 @@
 {{synopsis-heading}}
   {{synopsis}}
 
-{{description-heading}}
-{{description}}
+{{desc-heading}}
+{{desc}}
 
 {{options-heading}}
 {{options}}
